RADAR-22: add btn shadow. Fix first item shown in accordion on startpage. Add exit intent alert. Fix chart not visible in sidebar.

--- a/web/assets/scss/bootstrap-custom.scss
+++ b/web/assets/scss/bootstrap-custom.scss
@@ -191,7 +191,7 @@ h1{
                     background-color: $black;
                 }
             }
-            @include media-breakpoint-down(md) {
+            @include media-breakpoint-down(sm) {
                 width: 100%;
                 border-radius: 0;
             }
@@ -210,6 +210,7 @@ h1{
     background-color: $gray-200;
     position: fixed;
     bottom: 0;
+    box-shadow: 0 4px 16px rgba(0,0,0,.16);
     @include media-breakpoint-up(md) {
         width: 66.66667%;
         
